[gd_scene load_steps=21 format=3 uid="uid://bt2antvtlssr0"]

[ext_resource type="Script" uid="uid://bu75onu1mdpgr" path="res://scripts/baú.gd" id="1_3urpn"]
[ext_resource type="Texture2D" uid="uid://3gh50gutf3wo" path="res://Assets/Prontos/chest.png" id="1_fe3sc"]
[ext_resource type="AudioStream" uid="uid://u3vrnko6s5s0" path="res://Assets/Prontos/chest_open.mp3" id="3_oh3po"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qxnob"]
atlas = ExtResource("1_fe3sc")
region = Rect2(672, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc3j0"]
atlas = ExtResource("1_fe3sc")
region = Rect2(560, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk81g"]
atlas = ExtResource("1_fe3sc")
region = Rect2(448, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_o26eu"]
atlas = ExtResource("1_fe3sc")
region = Rect2(336, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iiem"]
atlas = ExtResource("1_fe3sc")
region = Rect2(224, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6bht"]
atlas = ExtResource("1_fe3sc")
region = Rect2(112, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t1q1"]
atlas = ExtResource("1_fe3sc")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3urpn"]
atlas = ExtResource("1_fe3sc")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh3po"]
atlas = ExtResource("1_fe3sc")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ftx"]
atlas = ExtResource("1_fe3sc")
region = Rect2(112, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc5hb"]
atlas = ExtResource("1_fe3sc")
region = Rect2(224, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_24tou"]
atlas = ExtResource("1_fe3sc")
region = Rect2(336, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2v0q"]
atlas = ExtResource("1_fe3sc")
region = Rect2(448, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wja8s"]
atlas = ExtResource("1_fe3sc")
region = Rect2(560, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycge5"]
atlas = ExtResource("1_fe3sc")
region = Rect2(672, 0, 112, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_qxnob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxnob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc3j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk81g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o26eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iiem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6bht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t1q1")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3urpn")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh3po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ftx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc5hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24tou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2v0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wja8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycge5")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mc3j0"]
size = Vector2(80, 36)

[node name="baú_chapeu" type="Area2D" groups=["disfarce"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_3urpn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(0.571429, 0.521739)
sprite_frames = SubResource("SpriteFrames_qxnob")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_mc3j0")

[node name="chest_open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oh3po")
pitch_scale = 2.03

[node name="chest_close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oh3po")
pitch_scale = 2.03

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
